# sheaf

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_pipeline.py
docs/: gallery.md  performance.md
examples/: build_gallery.py  build_hero.py  critical_points.py  gallery.py  gallery_catalog.py  painter_order.py  paper_render.py  tikz_emit.py
examples/gallery/: paper_main.tex  paper_pgfplots.tex  paper_tikz.tex  tikz_emit.tex
examples/gallery/tex/: catenoid.tex  dini.tex  enneper.tex  helicoid.tex  hyperbolic_saddle.tex  klein_bottle.tex  mobius_strip.tex  monkey_saddle.tex  paraboloid.tex  sphere.tex  torus.tex  whitney_umbrella.tex
sheaf/: __init__.py  core.py  materials.py  objects.py  paper.py  scene.py
sheaf/io/: __init__.py  main_tex.py
sheaf/numeric/: __init__.py  analysis.py  compiler.py  curvature.py  mesh.py  topology.py
sheaf/preview/: __init__.py  driver.py  lighting.py  pyvista_driver.py  vispy_driver.py
sheaf/vector/: __init__.py  bsp.py  camera.py  pgfplots.py  tikz.py
tests/: conftest.py  test_gallery.py  test_gallery_latex.py  test_imports.py  test_io_main_tex.py  test_latex_harness.py  test_materials_vector_params.py  test_numeric_analysis.py  test_numeric_compiler.py  test_numeric_curvature.py  test_numeric_mesh.py  test_numeric_topology.py  test_operators.py  test_paper_bbox.py  test_paper_render.py  test_preview_lighting.py  test_preview_visual.py  test_vector_bsp.py  test_vector_pgfplots.py  test_vector_tikz.py
